--- a/index.html
+++ b/index.html
@@ -192,9 +192,8 @@ body {
     </style>
   </head>
   <body>
-<h1>vhvbj</h1>
     <nav class="navbar row">
-      <span class="logo">AspireCoders</span>
+      <span class="logo">Nidharshann</span>
       <ul class="nav-menu box">
         <li class="black"><a href="#home">Home</a></li>
         <li><a href="#about-me">About me</a></li>
@@ -214,10 +213,10 @@ body {
 
       <section class="name">
         <div class="image">
-          <img src="https://picsum.photos/220" alt="no image found" />
+          <img src="" alt="no image found" />
         </div>
         <div class="content">
-          <h1>Niharshan</h1>
+          <h1>Nidharshann</h1>
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui
             quibusdam possimus mollitia a nesciunt magnam maxime nulla veritatis
